--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			<h6>设置</h6>
 		</span>
 
-		<button id="click" onclick="stip(0,'error',0,-1,'large')"> click</button>
+		<!-- <button id="click" onclick="stip(0,'error',0,-1,'large')"> click</button> -->
 
 
 
@@ -280,7 +280,7 @@
 
 						<ul class="os-menu-list">
 
-							<li><i class="fa fa-eye margin-l"></i> 查看</li>
+							<li><i class="fa fa-eye margin-l"></i> 查看</li
 							<li><a href="index.html" class="show"><i class="fa fa-refresh margin-l"></i> 重新载入</a></li>
 							<li><i class="fa fa-eraser margin-l"></i> 清除缓存</li>
 							<li><i class="fa fa-android margin-l"></i> 添加程序</li>
