--- a/index.html
+++ b/index.html
@@ -30,41 +30,36 @@
 
 	<div class="os-menu" style="">
 
-
 		<span class="os-menu-ico weixin os-menu-ico-drag" data="weixin" draggable="true">
 			<p><img src="http://pic.bmoon.net/logo/weixin.png" width="50" height="50"></p>
-			<h6>微 信</h6>
+			<h6>微 信</h6><br>
 		</span>
 
-		<span class="os-menu-ico  os-menu-ico-drag weibo" data="weibo"  draggable="true">
+		<span id="weibo" class="os-menu-ico  os-menu-ico-drag weibo" data="weibo"  draggable="true">
 			<p><img src="http://pic.bmoon.net/logo/weibo.png" width="50" height="50"></p>
-			<h6>微 博</h6>
+			<h6>微 博</h6><br>
 		</span>
 
-		<span class="os-menu-ico os-menu-ico-drag qq" data="qq"  draggable="true">
+		<span id="qq" class="os-menu-ico qq " data="qq" style="margin:0;" >
 			<p><img src="http://pic.bmoon.net/logo/qq.png" width="50" height="50"></p>
-			<h6>Q Q</h6>
+			<h6>Q Q</h6><br>
 		</span>
 
 		<span class="os-menu-ico os-menu-ico-drag" style="" draggable="true">
 			<p><i class="fa fa-user-circle-o fa-3x"></i></p>
-			<h6>用户管理</h6>
+			<h6>用户管理</h6><br>
 		</span>
 
 		<span class="os-menu-ico os-menu-ico-drag message" style="" draggable="true" >
 			<p><i class="fa fa-envelope-o fa-3x"></i></p>
-			<h6>消息盒子</h6>
+			<h6>消息盒子</h6><br>
 		</span>
 
 		<span class="os-menu-ico os-menu-ico-drag cog" data="cog"  draggable="true">
 			<p><p><i class="fa fa-cog fa-3x"></i></p></p>
-			<h6>设置</h6>
+			<h6>设置</h6><br>
 		</span>
-
 		<!-- <button id="click" onclick="stip(0,'error',0,-1,'large')"> click</button> -->
-
-
-
 	</div>
 
 
@@ -85,14 +80,14 @@
 			<i class="fa fa-close close-window" data-close="weibo" aria-hidden="true"></i>
 		</span>
 	</p>
-	<iframe  src="https://weibo.com/" sandbox="allow-scripts allow-same-origin allow-popups allow-same-origin allow-top-navigation" class="iframe" scrolling="auto" seamless>
+	<iframe id="window-iframe"  src="" sandbox="allow-scripts  allow-popups  allow-top-navigation" class="iframe" scrolling="auto" seamless>
 
 
 	</iframe>
 
 </div>
 
-<div class="qq-iframe " style="">
+<div class="qq-iframe " style="z-index: 10000;">
 	<p  class="nomargin bg-white-op os-iframe-title">
 		<i class="fa fa-qq" aria-hidden="true" > </i>  Smart QQ
 		<span class="right lg-margin-l">
@@ -101,7 +96,7 @@
 			<i class="fa fa-close close-window" data-close="qq" aria-hidden="true"></i>
 		</span>
 	</p>
-	<iframe class="qq-frame-src" name="win-560686314" src="http://web2.qq.com"  >
+	<iframe class="qq-frame-src" name="win" src=""  >
 	</iframe>
 
 </div>
@@ -134,10 +129,6 @@
 
 		<div class=" col-xs-6 col-md-8  nopadding" style="height:100%">
 			<iframe src="about.html" frameborder="0" scrollbar="auto" class="embed-responsive-item" style="width: 100%;height:100%;" >
-
-
-
-
 			</iframe>
 		</div>
 
