--- a/about.html
+++ b/about.html
@@ -10,7 +10,18 @@
 	<script src="https://cdn.staticfile.org/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body>
+<body style="background: transparent;">
+
+	<div class="container" style="text-align: center;">
+		
+		<img src="https://newevolutiondesigns.com/images/freebies/orange-wallpaper-7.jpg" alt="" class="img-circle" width="200" height="200" />
+
+		<h2>Salmon os ui</h2>
+
+		<h3>Version 1.01</h3>
+		<h3>create by salmon @me -> salmon@bmoon.net</h3>
+
+	</div>
 	
 
 </body>
