--- a/cog.html
+++ b/cog.html
@@ -1,3 +1,18 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
+	<title>最美不过遇见你</title>
+	<link href="https://cdn.staticfile.org/animate.css/3.7.0/animate.min.css" rel="stylesheet">
+	<link href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="https://cdn.staticfile.org/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script src="https://cdn.staticfile.org/jquery/3.3.1/jquery.min.js"></script>
+	<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+</head>
+<body style="background: transparent;">
+
+
 <h3>所有应用</h3>
 
 
@@ -5,8 +20,8 @@
 <input type="button" name="" value="添加"     style="padding: 10px 20px;border:1px solid #ccc;">
 
 <hr>
-
-<table>
+<div class="table-responsive">
+<table class="table  table-hover table-sprid" style="background: #ffffff;line-height: 40px;">
 
 <tr>
 	<th>名称</th>
@@ -16,8 +31,8 @@
 
 </tr>
 
-<tr>
-	<td>微信</td>
+<tr style="line-height: 40px;">
+	<td><img src="http://pic.bmoon.net/logo.png" alt="" width="40" height="40" class="img-circle"> 微信</td>
 	<td>网页版微信</td>
 	<td>已经添加到桌面</td>
 
@@ -47,3 +62,6 @@
 
 
 </table>
+</div>
+</body>
+</html>
