--- a/index.html
+++ b/index.html
@@ -30,34 +30,39 @@
 
 	<div class="os-menu" style="">
 
-		<span class="os-menu-ico weixin os-menu-ico-drag" data="weixin" draggable="true">
-			<p><img src="http://pic.bmoon.net/logo/weixin.png" width="50" height="50"></p>
-			<h6>微 信</h6><br>
+		
+
+		<span class="os-menu-ico user" data="user" style="" >
+			
+			<p><img src="img/user-o.svg" width="50" height="50"></p>
+			<b>用户管理</b><br>
 		</span>
+
+		<span class="os-menu-ico message" data="message" style=""  >
+			
+			<p><img src="img/message.svg" width="50" height="50"></p>
+			<b>消息盒子</b><br>
+		</span>
+
+		<span class="os-menu-ico cog" data="cog"  draggable="true">
+			
+			<p><img src="img/set.svg" width="50" height="50"></p>
+			<b>设置</b><br>
+		</span>
+
+		<!-- <span class="os-menu-ico weixin os-menu-ico-drag" data="weixin" draggable="true">
+			<p><img src="http://pic.bmoon.net/logo/weixin.png" width="50" height="50"></p>
+			<b>微 信</b><br>
+		</span> -->
 
 		<span id="weibo" class="os-menu-ico  os-menu-ico-drag weibo" data="weibo"  draggable="true">
 			<p><img src="http://pic.bmoon.net/logo/weibo.png" width="50" height="50"></p>
-			<h6>微 博</h6><br>
+			<b>微 博</b><br>
 		</span>
 
 		<span id="qq" class="os-menu-ico qq " data="qq" style="margin:0;" >
 			<p><img src="http://pic.bmoon.net/logo/qq.png" width="50" height="50"></p>
-			<h6>Q Q</h6><br>
-		</span>
-
-		<span class="os-menu-ico os-menu-ico-drag" style="" draggable="true">
-			<p><i class="fa fa-user-circle-o fa-3x"></i></p>
-			<h6>用户管理</h6><br>
-		</span>
-
-		<span class="os-menu-ico os-menu-ico-drag message" style="" draggable="true" >
-			<p><i class="fa fa-envelope-o fa-3x"></i></p>
-			<h6>消息盒子</h6><br>
-		</span>
-
-		<span class="os-menu-ico os-menu-ico-drag cog" data="cog"  draggable="true">
-			<p><p><i class="fa fa-cog fa-3x"></i></p></p>
-			<h6>设置</h6><br>
+			<b>Q Q</b><br>
 		</span>
 		<!-- <button id="click" onclick="stip(0,'error',0,-1,'large')"> click</button> -->
 	</div>
@@ -69,12 +74,12 @@
 
 <!-- 弹出窗体 -->
 
-<div id="" class="weibo-iframe os-window"  >
+<div id="" class=" os-window bg-white-op"  >
 	<p  class="nomargin bg-white-op os-iframe-title">
-		<img src="http://pic.bmoon.net/logo/weibo.png" class="weibo-title" width="30" height="30">
-		<span >微博</span>
+		<img src="http://pic.bmoon.net/logo/weibo.png" class="iframe-title-img" width="30" height="30">
+		<span class="iframe-title-content"></span>
 
-		<span class="right lg-margin-l">
+		<span class="right lg-margin-l iframeData" data="">
 			<i class="fa fa-minus min-window" data-min="weibo" aria-hidden="true"></i>
 			<i class="fa fa-television lg-margin-l" aria-hidden="true"></i>
 			<i class="fa fa-close close-window" data-close="weibo" aria-hidden="true"></i>
@@ -87,10 +92,10 @@
 
 </div>
 
-<div class="qq-iframe " style="z-index: 10000;">
+<div class="os-window iframe-qq " style="z-index: 10000;">
 	<p  class="nomargin bg-white-op os-iframe-title">
 		<i class="fa fa-qq" aria-hidden="true" > </i>  Smart QQ
-		<span class="right lg-margin-l">
+		<span class="right lg-margin-l  " data="qq">
 			<i class="fa fa-minus min-window" data-min="qq" aria-hidden="true"></i>
 			<i class="fa fa-television lg-margin-l" aria-hidden="true"></i>
 			<i class="fa fa-close close-window" data-close="qq" aria-hidden="true"></i>
@@ -104,18 +109,18 @@
 
 <!-- 弹出窗体 设置 -->
 
-<div  class="os-window cog-iframe"  >
+<div  class="os-window iframe-cog"  >
 	<p  class="nomargin bg-white-op os-iframe-title">
 		<i class="fa fa-cog" aria-hidden="true" > </i>  系统设置
 
-		<span class="right lg-margin-l">
-			<i class="fa fa-minus min-window" data-min="cog" aria-hidden="true"></i>
+		<span class="right lg-margin-l" data="cog">
+			<i class="fa fa-minus min-window"  aria-hidden="true"></i>
 			<i class="fa fa-television lg-margin-l" aria-hidden="true"></i>
-			<i class="fa fa-close close-window" data-close="cog" aria-hidden="true"></i>
+			<i class="fa fa-close close-window"  aria-hidden="true"></i>
 		</span>
 	</p>
 	<div class="iframe bg-white-op row" style="">
-		<div class="col-xs-6 col-sm-3 col-md-2  nopadding" >
+		<div class="hidden-xs hidden-sm col-md-2  nopadding" >
 			<ul style="" class="os-control-menu-list">
 				<li><i class="fa fa-android lg-margin-l"> </i>  应用管理</li>
 				<li><i class="fa fa-photo lg-margin-l"> </i>  壁纸设置</li>
@@ -127,8 +132,8 @@
 
 		</div>
 
-		<div class=" col-xs-6 col-md-8  nopadding" style="height:100%">
-			<iframe src="about.html" frameborder="0" scrollbar="auto" class="embed-responsive-item" style="width: 100%;height:100%;" >
+		<div class=" col-xs-12 col-md-8  nopadding" style="height:100%">
+			<iframe id="os-control-iframe" src="cog.html" frameborder="0" scrollbar="auto" class="embed-responsive-item" style="width: 100%;height:100%;" >
 			</iframe>
 		</div>
 
@@ -205,25 +210,25 @@
 
 								<span class="os-menu-ico text-center bg-black-op " >
 									<p class="min-margin-t"><img src="http://pic.bmoon.net/logo/weixin.png"  width="50" height="50"></p>
-									<h6 >微 信</h6>
+									<b >微 信</b>
 
 								</span>
 
 								<span class="os-menu-ico text-center bg-black-op " >
 									<p class="min-margin-t"><img src="http://pic.bmoon.net/logo/weixin.png"  width="50" height="50"></p>
-									<h6 >微 信</h6>
+									<b >微 信</b>
 
 								</span>
 
 								<span class="os-menu-ico text-center bg-black-op ">
 									<p class="min-margin-t"><img src="http://pic.bmoon.net/logo/weixin.png"  width="50" height="50"></p>
-									<h6 >微 信</h6>
+									<b >微 信</b>
 
 								</span>
 
 								<span class="os-menu-ico text-center bg-black-op " >
 									<p class="min-margin-t"><img src="http://pic.bmoon.net/logo/weixin.png" width="50" height="50"></p>
-									<h6 >微 信</h6>
+									<b >微 信</b>
 
 								</span>
 
