--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 			<i class="fa fa-close close-window" data-close="weibo" aria-hidden="true"></i>
 		</span>
 	</p>
-	<iframe id="window-iframe"  src="" sandbox="allow-scripts  allow-popups  allow-top-navigation" class="iframe" scrolling="auto" seamless>
+	<iframe id="window-iframe"  src="" sandbox="allow-scripts  allow-popups  allow-top-navigation" class="iframe" scrolling="auto" >
 
 
 	</iframe>
