--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
 			<b>消息盒子</b><br>
 		</span>
 
-		<span class="os-menu-ico cog" data="cog"  draggable="true">
-			
+		<span class="os-menu-ico cog" data="cog" >
 			<p><img src="img/set.svg" width="50" height="50"></p>
 			<b>设置</b><br>
 		</span>
@@ -208,9 +207,9 @@
 							</div>
 							<div class="os-start-page-content">
 
-								<span class="os-menu-ico text-center bg-black-op " >
-									<p class="min-margin-t"><img src="http://pic.bmoon.net/logo/weixin.png"  width="50" height="50"></p>
-									<b >微 信</b>
+								<span class="os-menu-ico text-center bg-black-op weibo" data="weibo" >
+									<p  class="min-margin-t"><img src="http://pic.bmoon.net/logo/weibo.png" width="50" height="50"></p>
+									<b>微 博</b>
 
 								</span>
 
@@ -260,7 +259,7 @@
 							<div class="right" style="flex-grow: 0;">
 								<div class="os-footer-ico right  os-control-btn"><i class="fa fa-circle-thin fa-lg" aria-hidden="true"></i></div>
 
-								<div class="os-footer-ico right" style="font-size: 12px;">12:55</div>
+								<div class="os-footer-ico right os-footer-time" style="font-size: 12px;"></div>
 
 								<div class="os-footer-ico right"><i class="fa fa-bell-o fa-min" aria-hidden="true"></i></div>
 
@@ -276,8 +275,8 @@
 
 						<ul class="os-menu-list">
 
-							<li><i class="fa fa-eye margin-l"></i> 查看</li
-							<li><a href="index.html" class="show"><i class="fa fa-refresh margin-l"></i> 重新载入</a></li>
+							<li><i class="fa fa-eye margin-l"></i> 查看</li>
+							<li><a href="index.html"><i class="fa fa-refresh margin-l"></i> 重新载入</a></li>
 							<li><i class="fa fa-eraser margin-l"></i> 清除缓存</li>
 							<li><i class="fa fa-android margin-l"></i> 添加程序</li>
 							<li><i class="fa fa-photo margin-l"></i> 更换壁纸</li>
