--- a/user.html
+++ b/user.html
@@ -10,26 +10,84 @@
 	<script src="https://cdn.staticfile.org/jquery/3.3.1/jquery.min.js"></script>
 	<script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body style="background: transparent;">
+<body style="background: rgba(255,255,255,0.5);" >
 
-<h3>当前壁纸</h3>
+<h2> 用户管理  管理员管理</h2>
 
-<img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1541491588651&di=32e69d8c7c6f13262eddae6035d7a2c3&imgtype=0&src=http%3A%2F%2Fpic1.win4000.com%2Fwallpaper%2F4%2F586b090b7f42b.jpg" width="" height="" class="img-responsive" style="width: 50%;">
+<div class="container table-responsive">
 
-<hr>
 
-<input type="text" name=""><input type="button" name="" value="添加">
+<table class="table  border-danger" style="background: rgba(25,25,25,0.5);color:#ffffff;">
 
-<hr>
+<tr>
+	<th>ID</th>
+	<th>用户名</th>
+	<th>是否认证</th>
+	<th>等级</th>
+	<th>积分</th>
+	<th>注册时间</th>
+	<th>注册IP</th>
+	<th>状态</th>
+	<th>管理</th>
+</tr>
 
-<div class="img-group" style="display: inline-block;">
-	<img class="os-cpntrol-pic-img" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1541491588651&di=32e69d8c7c6f13262eddae6035d7a2c3&imgtype=0&src=http%3A%2F%2Fpic1.win4000.com%2Fwallpaper%2F4%2F586b090b7f42b.jpg" width="" height="" class="img-responsive" style="width: 150px;">
-	<img  class="os-cpntrol-pic-img" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1541491588651&di=32e69d8c7c6f13262eddae6035d7a2c3&imgtype=0&src=http%3A%2F%2Fpic1.win4000.com%2Fwallpaper%2F4%2F586b090b7f42b.jpg" width="" height="" class="img-responsive" style="width: 150px;">
-	<img class="os-cpntrol-pic-img" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1541491588651&di=32e69d8c7c6f13262eddae6035d7a2c3&imgtype=0&src=http%3A%2F%2Fpic1.win4000.com%2Fwallpaper%2F4%2F586b090b7f42b.jpg" width="" height="" class="img-responsive" style="width: 150px;">
-	<img class="os-cpntrol-pic-img" src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1541491588651&di=32e69d8c7c6f13262eddae6035d7a2c3&imgtype=0&src=http%3A%2F%2Fpic1.win4000.com%2Fwallpaper%2F4%2F586b090b7f42b.jpg" width="" height="" class="img-responsive" style="width: 150px;">
+<tr>
+<td>10988</td>
+<td>salmon</td>
+<td>未认证</td>
+<td>青铜小会员</td>
+<td>100</td>
+<td>2018/10/31 10：38</td>
+<td>172.20.2.7</td>
+<td>正常/冻结</td>
+<td>密码重置 信息编辑</td>
 
+
+
+
+</tr>
+
+
+
+
+
+</table>
+
+
+<table class="table  border-danger" style="background: #ffffff">
+
+<tr>
+	<th>ID</th>
+	<th>用户名</th>
+	<th>等级</th>
+	<th>权限</th>
+	<th>添加时间</th>
+	<th>添加人</th>
+	<th>状态</th>
+	<th>管理</th>
+</tr>
+
+<tr>
+<td>10988</td>
+<td>salmon</td>
+<td>超级管理员</td>
+<td>1，2，3</td>
+<td>2018/10/31 10：38</td>
+<td>salmon</td>
+<td>正常/冻结</td>
+<td>密码重置 信息编辑</td>
+
+
+
+
+</tr>
+
+
+
+
+
+</table>
 
 </div>
-
 </body>
 </html>
